# Temka328

./: .gitlab-ci.yml  CMakeLists.txt  README.md  compile
src/: CMakeLists.txt  Object.cpp  main.cpp
src/Exceptions/: IncorrectCommandException.cpp  ObjectPropertyException.cpp  VectorArithmeticException.cpp
src/headers/: ICommand.h  IObject.h  Object.h
src/headers/Capabilities/: IMovable.h  IRotatable.h  IShootable.h  IState.h  IVelocity.h
src/headers/Commands/: CorrectVelocityCommand.h  EndMoveCommand.h  EndRotateCommand.h  MoveCommand.h  (+5 more)
test/: CMakeLists.txt  Moke_IObject.h  Object_test.cpp
test/Capabilities/: Moke_IMovable.h  Moke_IRotatable.h  Moke_IShootable.h  Moke_IState.h  Moke_IVelocity.h
test/Commands/: CorrectVelocityCommand_test.cpp  EndMoveCommand_test.cpp  EndRotateCommand_test.cpp  GenerateProjectileCommand_test.cpp  MoveCommand_test.cpp  MoveProjectileCommand_test.cpp  RotateCommand_test.cpp  StartMoveCommand_test.cpp  StartRotateCommand_test.cpp
test/Factories/: IFactory_test.cpp
test/Factories/Child_Factory/: Child_Factory.cpp  Child_Factory.h
test/Vectors/: Moke_RotateStrategy.h  Vector_test.cpp
test2/: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  clear  compile  Текстовый документ.bat
test2/src/: GenerateProjectileCommand.h  ICommand.h  IFactory.h  IObject.h  IShootable.h  IUObject.h  IVelocity.h  MoveProjectileCommand.h  Object.cpp  Object.h  ObjectPropertyException.h  Vector.h
test2/test/: CMakeLists.txt  GenerateProjectileCommand_test.cpp  Moke_IShootable.h  Moke_IVelocity.h  MoveProjectileCommand_test.cpp
(+6 files in other folders)
